# ribbon-bridge

./: CMakeLists.txt  DESIGN  SEMANTICS  TODO  arm_macros.cmake  avr-toolchain.cmake  config.hpp.in  ribbon-bridge-config.cmake.in  ribbon-bridge-functions.cmake  rpc.cpp  rpc.options  rpc.proto
include/rpc/: asyncproxy.hpp  buffer.hpp  checkversion.hpp  componenttraits.hpp  def.hpp  enableif.hpp  encode_decode.hpp  error.hpp  exception.hpp  hash.hpp  hasmember.hpp  implementationtraits.hpp  implements.hpp  invoke.hpp  message.hpp  object.hpp  potqueue.hpp  potringbuffer.hpp  printmessage.hpp  proxy.hpp  server.hpp  service.hpp  status.hpp  stdlibheaders.hpp  system_error.hpp  variant.hpp  version.hpp
include/rpc/asio/: client.hpp  forwardcoroutines.hpp  proxy.hpp  server.hpp  tcpclient.hpp  tcppolyserver.hpp  tcpserver.hpp  waitmultiplecompleter.hpp
proto/: robot.proto  rpc-options.proto  rpc.options  rpc.proto  widget.proto
src/: encode_decode.cpp  gen-rpc.pb.hpp  hello.c  is_base_of.hpp  message.cpp  potqueue.hpp  potringbuffer.hpp  printmessage.cpp  rpc.cpp  status.cpp  stdlibheaders.hpp  system_error.cpp
tests/: CMakeLists.txt  asio.cpp  attribute-set.cpp  broadcast-attribute.cpp  broadcast-broadcast.cpp  broadcast.cpp  connectedrpcobject.hpp  fire-method.cpp  fire.cpp  fullduplextransport.hpp  gen-robot.pb.cpp  gen-robot.pb.hpp  gen-widget.pb.cpp  gen-widget.pb.hpp  get-attribute.cpp  implements.hpp  method-fire.cpp  register-object.cpp  robotimpl.hpp  server.cpp  set-attribute.cpp  widgetimpl.hpp  widgetserver.hpp
tests/proto/: widget.proto
